--- a/app/src/main/res/layout/activity_calendar_new_event.xml
+++ b/app/src/main/res/layout/activity_calendar_new_event.xml
@@ -46,6 +46,8 @@
             android:layout_marginStart="36dp"
             android:layout_marginTop="76dp"
             android:text="@string/str_calendar_new_event_Date"
+            android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
             tools:text="@string/str_calendar_new_event_Date" />
@@ -76,8 +78,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="92dp"
             android:text="@string/str_calendar_new_event_Task"
+            android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.095"
+            app:layout_constraintHorizontal_bias="0.096"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/calendar_new_event_Date_tv" />
 
