--- a/app/src/main/res/layout/activity_crops_to_do.xml
+++ b/app/src/main/res/layout/activity_crops_to_do.xml
@@ -17,25 +17,27 @@
     <ListView
         android:id="@+id/crops_to_do_ListView"
         android:layout_width="409dp"
-        android:layout_height="300dp"
-        android:nestedScrollingEnabled="true"
+        android:layout_height="450dp"
+        android:layout_marginTop="24dp"
         android:background="#1AC2D6AD"
-        android:layout_marginTop="1dp"
+        android:nestedScrollingEnabled="true"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_crops_to_do" />
 
     <Button
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:stateListAnimator="@null"
-        app:cornerRadius="18dp"
-        android:backgroundTint="#9975A347"
         android:id="@+id/crops_to_do_Add_Btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="#9975A347"
+        android:stateListAnimator="@null"
         android:text="@string/str_animals_to_do_Add"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:cornerRadius="18dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/crops_to_do_ListView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout></androidx.core.widget.NestedScrollView>
