--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -13,28 +13,28 @@
     <ListView
         android:id="@+id/notes_ListView"
         android:layout_width="409dp"
-        android:layout_height="480dp"
+        android:layout_height="450dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/listview_backgroud"
+        android:dividerHeight="8dp"
         android:nestedScrollingEnabled="true"
-        android:background="#1AC2D6AD"
-        android:layout_marginTop="36dp"
-        app:layout_constraintBottom_toTopOf="@+id/notes_New_btn"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_notes"
-        app:layout_constraintVertical_bias="0.194" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_notes" />
 
     <Button
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:stateListAnimator="@null"
-        app:cornerRadius="18dp"
-        android:backgroundTint="#9975A347"
         android:id="@+id/notes_New_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="44dp"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="#9975A347"
+        android:stateListAnimator="@null"
         android:text="@string/str_notes_NewNote"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:cornerRadius="18dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/notes_ListView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
