--- a/app/src/main/res/layout/activity_notes_new.xml
+++ b/app/src/main/res/layout/activity_notes_new.xml
@@ -5,82 +5,81 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".NotesNew">
 
-    <include
-        android:id="@+id/toolbar_notes_new"
-        layout="@layout/toolbar" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/notes_new_textInputLayout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        tools:context=".NotesNew">
 
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="32dp"
-        android:hint="@string/str_calendar_new_event_SelectField"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_notes_new">
+        <include
+            android:id="@+id/toolbar_notes_new"
+            layout="@layout/toolbar" />
 
-        <AutoCompleteTextView
-            android:id="@+id/notes_new_auto_complete_txt"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/notes_new_textInputLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="32dp"
+            android:hint="@string/str_calendar_new_event_SelectField"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_notes_new">
+
+            <AutoCompleteTextView
+                android:id="@+id/notes_new_auto_complete_txt"
+                android:layout_width="match_parent"
+
+                android:layout_height="wrap_content"
+                android:inputType="none" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/notes_new_Confirm_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:backgroundTint="#9975A347"
+            android:stateListAnimator="@null"
+            android:text="@string/str_notes_new_Confirm"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:cornerRadius="18dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/notes_new_Cancel_btn"
+            app:layout_constraintTop_toBottomOf="@+id/notes_new_Note_pt" />
+
+        <Button
+            android:id="@+id/notes_new_Cancel_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:backgroundTint="#99DE3E25"
+            android:stateListAnimator="@null"
+            android:text="@string/str_notes_new_Cancel"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:cornerRadius="18dp"
+            app:layout_constraintEnd_toStartOf="@+id/notes_new_Confirm_btn"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/notes_new_Note_pt" />
+
+        <EditText
+            android:id="@+id/notes_new_Note_pt"
+            android:layout_width="wrap_content"
 
             android:layout_height="wrap_content"
-            android:inputType="none" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginTop="32dp"
+            android:ems="15"
+            android:hint="@string/str_notes_new_Note"
+            android:inputType="textPersonName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/notes_new_textInputLayout" />
 
-    <Button
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:stateListAnimator="@null"
-        app:cornerRadius="18dp"
-                android:backgroundTint="#9975A347"
-        android:id="@+id/notes_new_Confirm_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="60dp"
-        android:layout_marginBottom="56dp"
-        android:text="@string/str_notes_new_Confirm"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:stateListAnimator="@null"
-        app:cornerRadius="18dp"
-        android:backgroundTint="#99DE3E25"
-        android:id="@+id/notes_new_Cancel_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="56dp"
-        android:text="@string/str_notes_new_Cancel"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/notes_new_Confirm_btn"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
-        android:id="@+id/notes_new_Note_pt"
-        android:layout_width="wrap_content"
-
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="248dp"
-        android:ems="15"
-        android:hint="@string/str_notes_new_Note"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/notes_new_Cancel_btn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notes_new_textInputLayout"
-        app:layout_constraintVertical_bias="1.0" />
-
-</androidx.constraintlayout.widget.ConstraintLayout></androidx.core.widget.NestedScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout></androidx.core.widget.NestedScrollView>
