--- a/app/src/main/res/layout/activity_crops_detailed.xml
+++ b/app/src/main/res/layout/activity_crops_detailed.xml
@@ -18,8 +18,9 @@
             android:id="@+id/crops_detailed_ListView"
             android:layout_width="409dp"
             android:layout_height="400dp"
+            android:dividerHeight="-1dp"
             android:layout_marginTop="24dp"
-            android:background="#1AC2D6AD"
+            android:background="@drawable/listview_backgroud"
             android:nestedScrollingEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
