--- a/app/src/main/res/layout/activity_animals.xml
+++ b/app/src/main/res/layout/activity_animals.xml
@@ -38,7 +38,8 @@
             android:layout_width="409dp"
             android:layout_height="450dp"
             android:layout_marginTop="32dp"
-            android:background="#1AC2D6AD"
+            android:background="@drawable/listview_backgroud"
+            android:dividerHeight="-1dp"
             android:nestedScrollingEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
