--- a/app/src/main/res/layout/activity_animals_add.xml
+++ b/app/src/main/res/layout/activity_animals_add.xml
@@ -96,7 +96,7 @@
             android:layout_width="409dp"
             android:layout_height="320dp"
             android:layout_marginTop="32dp"
-            android:background="#1AC2D6AD"
+            android:background="@drawable/listview_backgroud"
             android:nestedScrollingEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
