--- a/app/src/main/res/layout/activity_animals_detailed.xml
+++ b/app/src/main/res/layout/activity_animals_detailed.xml
@@ -15,7 +15,8 @@
         android:layout_width="409dp"
         android:layout_height="400dp"
         android:layout_marginTop="24dp"
-        android:background="#1AC2D6AD"
+        android:dividerHeight="-1dp"
+        android:background="@drawable/listview_backgroud"
         android:nestedScrollingEnabled="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_animals_detailed">
