--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -18,7 +18,7 @@
             android:layout_height="250dp"
             android:background="#1AC2D6AD"
             android:nestedScrollingEnabled="true"
-
+            android:dividerHeight="-1dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/compactcalendar_view" />
