--- a/app/src/main/res/layout/notes_adapter_view.xml
+++ b/app/src/main/res/layout/notes_adapter_view.xml
@@ -9,10 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Note"
-        android:textSize="30sp"
+        android:textSize="22dp"
         android:textColor="#334D1A"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:background="#D98FA6DD "
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:background="#D98DA5A3 "
         tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
