--- a/app/src/main/res/layout/todo_adapter_view.xml
+++ b/app/src/main/res/layout/todo_adapter_view.xml
@@ -3,7 +3,8 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="100">
+    android:weightSum="100"
+    android:background="#D98DA5A3">
 
 
     <TextView
@@ -12,8 +13,9 @@
         android:text="TextView1"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:textStyle="bold"
+        android:textSize="16dp"
         android:textColor="#334D1A"
-        android:background="#7FC2D6AD"
         android:id="@+id/animals_todo_adapter_Task_tv"
         android:layout_weight="66.6"/>
 
@@ -25,9 +27,10 @@
 
         <TextView
             android:gravity="center"
-            android:text="Total Number:"
+            android:text="Date:"
+            android:textStyle="bold"
+            android:textSize="16dp"
             android:textColor="#334D1A"
-            android:background="#7FC2D6AD"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:id="@+id/animals_todo_adapter_DateUp_tv"/>
@@ -35,10 +38,11 @@
         <TextView
             android:gravity="center"
             android:text="TextView3"
+            android:textStyle="bold"
+            android:textSize="16dp"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:textColor="#334D1A"
-            android:background="#7FC2D6AD"
             android:id="@+id/animals_todo_adapter_DateDown_tv"
             android:layout_below="@+id/textView2"/>
     </LinearLayout>
