--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -34,8 +34,8 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             app:compactCalendarBackgroundColor="#B352A1CD"
-            app:compactCalendarCurrentDayBackgroundColor="#94B870"
-            app:compactCalendarCurrentSelectedDayBackgroundColor="#94B870"
+            app:compactCalendarCurrentDayBackgroundColor="#37A531"
+            app:compactCalendarCurrentSelectedDayBackgroundColor="#37A531"
             app:compactCalendarCurrentSelectedDayIndicatorStyle="no_fill_large_indicator"
             app:compactCalendarEventIndicatorStyle="small_indicator"
             app:compactCalendarMultiEventIndicatorColor="@color/black"
